# Desafio_2

Desafio_II/: Analisis_diseño_desafio-II.ipynb  CMakeLists.txt  Disculpas.ipynb  Documentación.ipynb  Enlace al videoo.txt  Enlace video.txt  main.cpp
Desafio_II/Codigo/: CMakeLists.txt  anuncios.txt  clases.h  favoritos.txt  main.cpp  usuarios.txt
Desafio_II/Codigo/Canciones_premium/: 19 Días y 500 Noches.txt  A Puro Dolor.txt  Bohemian Rhapsody.txt  De Música Ligera.txt  El Talisman.txt  Hallelujah.txt  Hotel California.txt  I Will Always Love You.txt  Imagine.txt  La Bamba.txt  La Macarena.txt  Like a Rolling Stone.txt  Limón y Sal.txt  Livin' on a Prayer.txt  Mediterráneo.txt  No Woman, No Cry.txt  Rolling in the Deep.txt  September.txt  Smooth Criminal.txt  Yesterday.txt
Desafio_II/Codigo/Canciones_regulares/: 19 Días y 500 Noches.txt  A Puro Dolor.txt  Bohemian Rhapsody.txt  De Música Ligera.txt  El Talisman.txt  Hallelujah.txt  Hotel California.txt  I Will Always Love You.txt  Imagine.txt  La Bamba.txt  La Macarena.txt  Like a Rolling Stone.txt  Limón y Sal.txt  Livin' on a Prayer.txt  Mediterráneo.txt  No Woman, No Cry.txt  Rolling in the Deep.txt  September.txt  Smooth Criminal.txt  Yesterday.txt
